由于胖虎代码私有化，更新镜像
由于胖虎代码私有化，更新镜像

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "rap2hpoutre/laravel-log-viewer": "^1.0",
         "riverslei/payment": "*",
         "spatie/laravel-permission": "^2.29",
-        "youzan/open-sdk": "^1.0"
+        "youzan/open-sdk": "*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -73,7 +73,7 @@
 	"repositories": {
         "packagist": {
             "type": "composer",
-            "url": "https://packagist.laravel-china.org"
+            "url": "https://packagist.phpcomposer.com"
         }
     },
     "minimum-stability": "dev",
